# jupyterhub-groups-exporter

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECURITY.md  chartpress.yaml  jupyterhub_config.py  pyproject.toml
.github/workflows/: publish-helm-chart.yaml  run-pytest.yaml
docs/: index.md  myst.yml
docs/how-to/: index.md  installation.md
docs/reference/: configuration.md  index.md  metrics.md
helm/jupyterhub-groups-exporter/: Chart.yaml  values.yaml
helm/jupyterhub-groups-exporter/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
helm/jupyterhub-groups-exporter/templates/tests/: test-connection.yaml
jupyterhub_groups_exporter/: __init__.py  app.py  groups_exporter.py  kubespawner_slugs.py  metrics.py  test.json
jupyterhub_user_groups/: user_groups.py
tests/: conftest.py  jupyterhub_config.py  test_groups_exporter.py
