# build-system
# - ref: https://peps.python.org/pep-0517/
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# project
# - ref 1: https://peps.python.org/pep-0621/
# - ref 2: https://hatch.pypa.io/latest/config/metadata/#project-metadata
#
[project]
name = "jupyterhub_groups_exporter"
description = "JupyterHub service to export user group membership to Prometheus."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["jupyterhub", "prometheus"]
authors = [
    {name = "jnywong", email = "jnywong.pro@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
]
dependencies = [
    # NOTE: If lower bounds are updated, also update our test for the lower
    #       bounds in .github/workflows/test.yaml.
    "jupyterhub>=5.0.0",
    "aiohttp>=3.11.0",
    "asyncio>=3.4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "jupyter_server>=2.0.0",
    "pycurl>=7.43.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
]

# [project.urls]
# Documentation = "https://jupyterhub_groups_exporter.readthedocs.io"
# Source = "https://github.com/jupyterhub/jupyterhub_groups_exporter"
# Issues = "https://github.com/jupyterhub/jupyterhub_groups_exporter/issues"


# hatch ref: https://hatch.pypa.io/latest/
#
[tool.hatch.version]
path = "jupyterhub_groups_exporter/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

# autoflake is used for autoformatting Python code
#
# ref: https://github.com/PyCQA/autoflake#readme
#
[tool.autoflake]
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true


# black is used for autoformatting Python code
#
# ref: https://black.readthedocs.io/en/stable/
#
[tool.black]
skip-string-normalization = false


# isort is used for autoformatting Python code
#
# ref: https://pycqa.github.io/isort/
#
[tool.isort]
profile = "black"


# pytest is used for running Python based tests
#
# ref: https://docs.pytest.org/en/stable/
#
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = "True"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]


# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
# [tool.tbump]
# github_url = "https://github.com/jupyterhub/jupyterhub_groups_exporter"

# [tool.tbump.version]
# current = "0.0.1.dev0"
# regex = '''
#     (?P<major>\d+)
#     \.
#     (?P<minor>\d+)
#     \.
#     (?P<patch>\d+)
#     (?P<pre>((a|b|rc)\d+)|)
#     \.?
#     (?P<dev>(?<=\.)dev\d*|)
# '''

# [tool.tbump.git]
# message_template = "Bump to {new_version}"
# tag_template = "{new_version}"

# [[tool.tbump.file]]
# src = "jupyterhub_groups_exporter/_version.py"