[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterhub_groups_exporter"
description = "JupyterHub service to export user group membership to Prometheus."
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
keywords = ["jupyterhub", "prometheus"]
authors = [
    {name = "jnywong", email = "jnywong.pro@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.11.0",
    "asyncio>=3.4.0",
    "backoff>=2.2.0",
    "prometheus_client>=0.21.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "jupyterhub>=5.0.0",
    "jupyter_server>=2.0.0",
    "psutil>=7.0.0",
    "pycurl>=7.43.0",
    "pytest>=8.0.0",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=0.26.0",
]

# [project.urls]
# Source = "https://github.com/2i2c-org/jupyterhub_groups_exporter"
# Issues = "https://github.com/2i2c-org/jupyterhub_groups_exporter/issues"

[tool.hatch.version]
path = "jupyterhub_groups_exporter/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.autoflake]
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
skip-string-normalization = false

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = "True"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

# [tool.tbump]
# github_url = "https://github.com/2i2c-org/jupyterhub_groups_exporter"

# [tool.tbump.version]
# current = "0.0.1.dev0"
# regex = '''
#     (?P<major>\d+)
#     \.
#     (?P<minor>\d+)
#     \.
#     (?P<patch>\d+)
#     (?P<pre>((a|b|rc)\d+)|)
#     \.?
#     (?P<dev>(?<=\.)dev\d*|)
# '''

# [tool.tbump.git]
# message_template = "Bump to {new_version}"
# tag_template = "{new_version}"

# [[tool.tbump.file]]
# src = "jupyterhub_groups_exporter/_version.py"
